codepkg/objects/Sales_Error_Code__c.object
<CustomObject>
    <description>All the Error Numbers for all the validation</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Correction__c</fullName>
        <label>Error Correction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Error Description</description>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Detail_Report_Link__c</fullName>
        <description>Link to the error for this error code</description>
        <label>Error Detail Report Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error Message</description>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Error Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Field</fullName>
                </value>
                <value>
                    <fullName>Label &amp; Division</fullName>
                </value>
                <value>
                    <fullName>Calculation</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Model</fullName>
                </value>
                <value>
                    <fullName>Model_Error</fullName>
                    <isActive>false</isActive>
                    <label>Model_Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Code_Type__c</fullName>
        <label>Record Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Upload</fullName>
                </value>
                <value>
                    <fullName>MagNET</fullName>
                </value>
                <value>
                    <fullName>MagNET Internal</fullName>
                </value>
                <value>
                    <fullName>Budget Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Error Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Code_Type__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Error_Records__c</columns>
        <columns>Error_Detail_Report_Link__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BudgetUpload</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Record_Code_Type__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Active__c</columns>
        <columns>Error_Correction__c</columns>
        <columns>Error_Records__c</columns>
        <columns>Error_Detail_Report_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Code_Type__c</field>
            <operation>equals</operation>
            <value>Budget Upload</value>
        </filters>
        <label>_BudgetUpload</label>
    </listViews>
    <listViews>
        <fullName>Error_Code</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Active__c</columns>
        <columns>Error_Detail_Report_Link__c</columns>
        <filterScope>Mine</filterScope>
        <label>Error Code</label>
    </listViews>
    <listViews>
        <fullName>SalesUpload</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Record_Code_Type__c</columns>
        <columns>Error_Description__c</columns>
        <columns>Active__c</columns>
        <columns>Error_Correction__c</columns>
        <columns>Error_Records__c</columns>
        <columns>Error_Detail_Report_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Code_Type__c</field>
            <operation>equals</operation>
            <value>Sales Upload</value>
        </filters>
        <label>_SalesUpload</label>
    </listViews>
    <nameField>
        <label>Sales Error Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Error Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>